# computer-graphic-small-projects

./: README.md
cube_color/: CMakeLists.txt  main.cpp
ray_tracing_in_one_weekend/: CMakeLists.txt  camera.h  color.h  hittable.h  interval.h  main.cpp  material.h  rtweekend.h  sphere.h  vec3.h
